--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
 		<jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
 		<sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>
-		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>
+<!--		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>-->
+		<sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
 		<sonar.language>java</sonar.language>
 		<surefire.version>2.17</surefire.version>
 	</properties>
