--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
-		<jacoco-maven-plugin>0.8.6</jacoco-maven-plugin>
-		<sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>
+		<jacoco-maven-plugin>0.8.7</jacoco-maven-plugin>
+<!--		<sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>-->
 <!--		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>-->
 		<sonar.jacoco.reportPath>target/site/jacoco/jacoco.xml</sonar.jacoco.reportPath>
-		<sonar.language>java</sonar.language>
-		<surefire.version>2.17</surefire.version>
+<!--		<sonar.language>java</sonar.language>-->
+<!--		<surefire.version>2.17</surefire.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -151,16 +151,16 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
-			</plugin>
-			<plugin>
-				<groupId>org.sonarsource.scanner.maven</groupId>
-				<artifactId>sonar-maven-plugin</artifactId>
-				<version>3.4.0.905</version>
-			</plugin>
+<!--			<plugin>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<version>${surefire.version}</version>-->
+<!--			</plugin>-->
+<!--			<plugin>-->
+<!--				<groupId>org.sonarsource.scanner.maven</groupId>-->
+<!--				<artifactId>sonar-maven-plugin</artifactId>-->
+<!--				<version>3.4.0.905</version>-->
+<!--			</plugin>-->
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
