--- a/pom.xml
+++ b/pom.xml
@@ -16,12 +16,12 @@
 	<properties>
 		<java.version>17</java.version>
 		<spring-cloud.version>2023.0.1</spring-cloud.version>
-		<jacoco-maven-plugin>0.8.7</jacoco-maven-plugin>
+		<jacoco-maven-plugin>0.8.11</jacoco-maven-plugin>
 <!--		<sonar.binaries>${project.basedir}/../target/classes</sonar.binaries>-->
 <!--		<sonar.jacoco.reportPath>${project.basedir}/../target/jacoco.exec</sonar.jacoco.reportPath>-->
-		<sonar.jacoco.reportPath>target/site/jacoco/jacoco.xml</sonar.jacoco.reportPath>
+<!--		<sonar.jacoco.reportPath>target/site/jacoco/jacoco.xml</sonar.jacoco.reportPath>-->
 <!--		<sonar.language>java</sonar.language>-->
-		<surefire.version>2.17</surefire.version>
+<!--		<surefire.version>2.17</surefire.version>-->
 	</properties>
 	<dependencies>
 		<dependency>
@@ -151,27 +151,27 @@
 
 	<build>
 		<plugins>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<version>${surefire.version}</version>
-			</plugin>
 <!--			<plugin>-->
-<!--				<groupId>org.sonarsource.scanner.maven</groupId>-->
-<!--				<artifactId>sonar-maven-plugin</artifactId>-->
-<!--				<version>3.4.0.905</version>-->
+<!--				<groupId>org.apache.maven.plugins</groupId>-->
+<!--				<artifactId>maven-surefire-plugin</artifactId>-->
+<!--				<version>${surefire.version}</version>-->
 <!--			</plugin>-->
+			<plugin>
+				<groupId>org.sonarsource.scanner.maven</groupId>
+				<artifactId>sonar-maven-plugin</artifactId>
+				<version>3.8.0.2131</version>
+			</plugin>
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
 				<version>${jacoco-maven-plugin}</version>
-				<configuration>
-					<destFile>${sonar.jacoco.reportPath}</destFile>
-					<append>true</append>
-					<includes>
-						<include>**/*.class</include>
-					</includes>
-				</configuration>
+<!--				<configuration>-->
+<!--					<destFile>${sonar.jacoco.reportPath}</destFile>-->
+<!--					<append>true</append>-->
+<!--					<includes>-->
+<!--						<include>**/*.class</include>-->
+<!--					</includes>-->
+<!--				</configuration>-->
 				<executions>
 					<execution>
 						<goals>
