--- a/pom.xml
+++ b/pom.xml
@@ -122,6 +122,17 @@
 			<artifactId>jacoco-maven-plugin</artifactId>
 			<version>${jacoco-maven-plugin}</version>
 		</dependency>
+		<!-- Exclude default Logback logger to use log4j2 coming from core package -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter</artifactId>
+			<exclusions>
+				<exclusion>
+					<groupId>org.springframework.boot</groupId>
+					<artifactId>spring-boot-starter-logging</artifactId>
+				</exclusion>
+			</exclusions>
+		</dependency>
 	</dependencies>
 
 	<repositories>
